change iPhone6plus api

--- a/_imq.scss
+++ b/_imq.scss
@@ -31,7 +31,7 @@ body {
     // iPhone 6
     $iphone6: "only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2)";
     // iPhone 6 Plus
-    $iphone6p: "only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3)";
+    $iphone6plus: "only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3)";
 
     @if $type == iphone4 {
         @media #{$iphone4} { @content; }
@@ -42,8 +42,8 @@ body {
     @else if $type == iphone6 {
         @media #{$iphone6} { @content; }
     }
-    @else if $type == iphone6p {
-        @media #{$iphone6p} { @content; }
+    @else if $type == iphone6plus {
+        @media #{$iphone6plus} { @content; }
     }
 
 }
